<resources>
    <string name="app_name">Number Guessing Game</string>
    <string name="info">Please select a number of digits.
The number of digits that I keep in my mind and
the number of digits you choose will be the same. Also,
never forget that you have 10 writes.
    </string>
    <string name="na">Not Available</string>
    <string name="two_digit_number">Two Digit Number</string>
    <string name="three_digit_number">Three Digit Number</string>
    <string name="four_digit_number">Four Digit Number</string>
    <string name="start">Start</string>
    <string name="snackbar_message">Please select a number of digits</string>
    <string name="last_guess">Your Last Guess</string>
    <string name="remaining_writes">Your remaining writes</string>
    <string name="increase_guess">Increase your guess</string>
    <string name="decrease_guess">Decrease your guess</string>
    <string name="editText_hint">Enter your guess</string>
    <string name="confirm">Confirm</string>
    <string name="toast_message">Please enter a guess</string>
    <string name="dialog_title">Number Guessing Game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>